--- a/index.html
+++ b/index.html
@@ -28,10 +28,51 @@
     <a href="">Get Started</a>
   </div>
 
+  <!-- <form action=""> -->
+    <input type="text" name="age" id="age">
+    <input type="submit" value="Submit" onclick="onSubmit()">
+  <!-- </form> -->
+
   <p class="footer">
       &copy; 2022. TechHub Ghana
   </p>
 
+  <script>
+    
+    function onSubmit() {
+    var age = document.getElementById("age").value;
+    console.log(age);
+
+    if((age >= 5) && (age <= 12)){
+      alert('Children');
+    }
+
+    else if((age >= 13) && (age <= 19)){
+      alert('Teenagers');
+    }
+
+    else if((age >= 20) && (age <= 35)){
+      alert('Young Adults');
+    }
+
+    else if((age >= 36) && (age <= 45)){
+      alert('Mature Adults')
+    }
+
+    else if((age >= 46) && (age <= 55)){
+      alert('Elders');
+    }
+
+    else if(age >= 56){
+      alert('Seniors');
+    }
+
+    else{
+      alert('Infants');
+    }
+    }
+
+  </script>
 
 </body>
 </html>
